--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 									<span class="number" data-number="20">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
-								<p><a href="https://www.linkedin.com/in/uma-maheshwar-reddy-manda/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
+								<p><a href="http://www.linkedin.com/in/maheshwar-uma-0a2bb1332" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
 							</div>
 						</div>
 					</div>
