--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 						<br>
 						<br>
-			            <h2>A Software Engineer</h2>
+			            <h2>A DevOps Engineer</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            
