--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Uma Maheshwar Reddy Manda</span></p>
-										<p><span class="title-s">Job Role: </span> <span>Software Engineer</span></p>
-										<p><span class="title-s">Experience: </span> <span>1 year 6 Months</span></p>
+										<p><span class="title-s">Job Role: </span> <span>DevOps Engineer</span></p>
+										<p><span class="title-s">Experience: </span> <span>3 year 8 Months</span></p>
 										<p><span class="title-s">Address: </span> <span>Jacksonville, FL</span></p>
 									  </div>
 									</div>
@@ -270,7 +270,7 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>Software Engineer With over 1 year and 6 months in the technology sector, I bring a robust and versatile skill set that bridges DevOps, data analysis, and software development. I excel in crafting and optimizing CI/CD pipelines, automating infrastructure using Docker, Kubernetes, and Terraform, and managing complex cloud environments across AWS, Azure, and Google Cloud Platform. My proven expertise extends to developing dynamic full-stack applications, harnessing data for insightful analysis and visualization, and enhancing system performance for peak efficiency. My proactive and collaborative approach ensures impactful contributions to team success, driving continuous improvements in both processes and technologies.</p>
+								<p>DevOps Engineer With over 3 year and 8 months in the technology sector, I bring a robust and versatile skill set that bridges DevOps, data analysis, and software development. I excel in crafting and optimizing CI/CD pipelines, automating infrastructure using Docker, Kubernetes, and Terraform, and managing complex cloud environments across AWS, Azure, and Google Cloud Platform. My proven expertise extends to developing dynamic full-stack applications, harnessing data for insightful analysis and visualization, and enhancing system performance for peak efficiency. My proactive and collaborative approach ensures impactful contributions to team success, driving continuous improvements in both processes and technologies.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Data Analysis:</span> <span>Data analysis, data mining, data visualization, statistical analysis, data modeling, data cleaning</span></li>
 									<li class="d-flex"><span>Databases:</span> <span>MySQL, PostgreSQL, MongoDB, Oracle, SQL Server, NoSQL</span></li>
@@ -308,7 +308,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Seasoned DevOps Engineer with 1.5 years of experience in optimizing deployment processes and managing cloud infrastructure. Expertise in automation, CI/CD pipelines, and containerization using Terraform, Ansible, Docker, and Kubernetes. Also experienced as a software engineer with full-stack development skills and proficient in SQL for data analysis, delivering robust and scalable solutions.</p>
+            <p>Seasoned DevOps Engineer with 3.5 years of experience in optimizing deployment processes and managing cloud infrastructure. Expertise in automation, CI/CD pipelines, and containerization using Terraform, Ansible, Docker, and Kubernetes. Also experienced as a software engineer with full-stack development skills and proficient in SQL for data analysis, delivering robust and scalable solutions.</p>
           </div>
         </div>
 
@@ -319,6 +319,22 @@
 		<br>
 		
 		<div class="row">
+			<div class="col-md-6">
+				<div class="resume-wrap ftco-animate">
+					<span class="date">Oct 2022-Present</span>
+					<h2>Devops Engineer</h2>
+					<span class="position">ESF 8 Portal</span>
+					<span class="mt-4">Texas, USA</span>
+					<p class="mt-4">Make a simple, integrated, user-friendly software suite that provided all the information needed by emergency preparedness managers in one single place with single sign-on through web and mobile apps. 
+						<ul>
+							<li>Developed and optimized Azure DevOps CI/CD pipelines for deploying web and mobile applications, achieving a 20% reduction in system downtime.</li>
+							<li>Configured Terraform for security group rules and firewall settings, reducing security incidents by 15%, and employed Jenkins pipelines with Azure Monitor for enhanced system monitoring and 35% better incident resolution.</li>
+							
+						</ul>
+					</p>
+				</div>
+
+			</div>
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">Apr 2021-Sep 2021</span>
@@ -339,7 +355,7 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">Apr 2020-Sep 2020</span>
-						<h2>Software Engineer Intern</h2>
+						<h2>Software Engineer</h2>
 						<span class="position">M Globe Technologies</span>
 						<span class="mt-4">Hyderabad, India</span>
 						<p class="mt-4">M Global, A technology company specializing in full-stack development and software solutions, focusing on delivering innovative and efficient digital experiences. 
@@ -403,7 +419,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://docs.google.com/document/d/1UUmazY9ipiCYrff0dSrbquyKRTONFG_x/edit?usp=drive_link&ouid=110728171286518289673&rtpof=true&sd=true" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1gGFGMVzM5YLjOSE2ydpqF43hf2NNqJ7P/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -560,7 +576,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://docs.google.com/document/d/1UUmazY9ipiCYrff0dSrbquyKRTONFG_x/edit?usp=drive_link&ouid=110728171286518289673&rtpof=true&sd=true">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1gGFGMVzM5YLjOSE2ydpqF43hf2NNqJ7P/view?usp=drive_link">resumelink</a></p>
 	          </div>
           </div>
 
