--- a/index.html
+++ b/index.html
@@ -159,9 +159,8 @@
 
 						// Create an array of typing text
 						const typingTexts = [
-						'Data Analyst  ',
-						'Devops  ',
-						'Software Engineer   ',
+						'Passionate  ',
+						'DevOps Engineer   ',
 						];
 
 						// Create a function to display the typing animation for a given text
