--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 			<div class="col-md-6">
 				<div class="resume-wrap ftco-animate">
 					<span class="date">Oct 2023-Present</span>
-					<h2>Devops Engineer</h2>
+					<h2>DevOps Engineer</h2>
 					<span class="position">ESF8Portal</span>
 					<span class="mt-4">Texas, USA</span>
 					<p class="mt-4">Make a simple, integrated, user-friendly software suite that provided all the information needed by emergency preparedness managers in one single place with single sign-on through web and mobile apps. 
