--- a/index.html
+++ b/index.html
@@ -455,8 +455,54 @@
           </div>
         </div>
 	<br>
-		<!-- added justify-content-center to center align the last two projects -->
-		
+		<section class="ftco-section" id="certification-section">
+			<div class="container">
+			  <div class="row justify-content-center mb-5 pb-5">
+				<div class="col-md-7 heading-section text-center ftco-animate">
+				  <h1 class="big big-2">Certifications</h1>
+				  <h2 class="mb-4">Cerifications</h2>
+				  <p>Highlights of my professional Certifications I have earned:</p>
+				</div>
+			  </div>
+			  <div class="row d-flex">
+				<div class="col-md-6 d-flex ftco-animate">
+				  <div class="blog-entry align-self-stretch">
+					<h3 class="heading">Verizon Cloud VPN Product Development</h3>
+					<p>Developed a VPN product assessing cloud-native traits using Python; gained expertise in cloud security and improved my ability to present complex technical data effectively.</p>
+					<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/uu47f3odrfruEWjKw/aNJGnRtgfiK5fQqcR_uu47f3odrfruEWjKw_mxpWRrkw55dQZce4G_1738441806726_completion_certificate.pdf" class="icon d-flex align-items-center justify-content-center">View Certificate</a>
+				  </div>
+				</div>
+				<div class="col-md-6 d-flex ftco-animate">
+				  <div class="blog-entry align-self-stretch">
+					<h3 class="heading">Walmart Software Engineering Innovation</h3>
+					<p>Created advanced Java data structures and software architectures for Walmart’s logistics; enhanced my problem-solving skills and deepened my understanding of efficient system design.</p>
+					<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/prBZoAihniNijyD6d/oX6f9BbCL9kJDJzfg_prBZoAihniNijyD6d_mxpWRrkw55dQZce4G_1738438087865_completion_certificate.pdf" class="icon d-flex align-items-center justify-content-center">View Certificate</a>
+				  </div>
+				</div>
+				<div class="col-md-6 d-flex ftco-animate">
+				  <div class="blog-entry align-self-stretch">
+					<h3 class="heading">AWS Solutions Architecture Design</h3>
+					<p>Designed a scalable cloud solution with AWS Elastic Beanstalk for improved client service; honed my architectural skills and learned cost-effective infrastructure management.</p>
+					<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/pmnMSL4QiQ9JCgE3W/kkE9HyeNcw6rwCRGw_pmnMSL4QiQ9JCgE3W_mxpWRrkw55dQZce4G_1733423407575_completion_certificate.pdf" class="icon d-flex align-items-center justify-content-center">View Certificate</a>
+				  </div>
+				</div>
+				<div class="col-md-6 d-flex ftco-animate">
+				  <div class="blog-entry align-self-stretch">
+					<h3 class="heading">J.P. Morgan Chase Data Visualization Enhancement</h3>
+					<p>Set up and debugged a development environment, using JPMorgan’s Perspective for live data visualizations; significantly boosted my data presentation skills and system troubleshooting.</p>
+					<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/J.P.%20Morgan/R5iK7HMxJGBgaSbvk_J.P.%20Morgan_mxpWRrkw55dQZce4G_1709934214650_completion_certificate.pdf" class="icon d-flex align-items-center justify-content-center">View Certificate</a>
+				  </div>
+				</div>
+				<div class="col-md-6 d-flex ftco-animate">
+				  <div class="blog-entry align-self-stretch">
+					<h3 class="heading">JPMorgan Chase System Optimization</h3>
+					<p>Overhauled a credit card rewards system with new classes and automated tests; advanced my knowledge in object-oriented programming and increased system reliability.</p>
+					<a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/J.P.%20Morgan/Wb4yEmHvZrC2qxiyX_JPMorgan%20Chase%20&%20Co._mxpWRrkw55dQZce4G_1708665307913_completion_certificate.pdf" class="icon d-flex align-items-center justify-content-center">View Certificate</a>
+				  </div>
+				</div>
+			  </div>
+			</div>
+		  </section>
 	  </div>
     </section>
 
