--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/15cvEtswVA-9HfFBnRAJWiQ7IwWFSrEDS/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/15cvEtswVA-9HfFBnRAJWiQ7IwWFSrEDS/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -606,7 +606,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/15cvEtswVA-9HfFBnRAJWiQ7IwWFSrEDS/view?usp=drive_link">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/15cvEtswVA-9HfFBnRAJWiQ7IwWFSrEDS/view?usp=sharing">resumelink</a></p>
 	          </div>
           </div>
 
